2) init.d: fix LLLLL config for bridget modes.<br>
3) init.d: fix LLLWW config.<br>
4) init.d: fix kext switch workaround.<br>
5) init.d: in bridged mode direct enable Multicast2Unicast in wifi drivers independed by igmpproxy enable.<br>
10) sysctl: tune defaults more optimal for 64Mb ram devices.<br>
11) igmpproxy: rework snooping managment code (temp disable static records managent).<br>
12) buildsystem: small cleanup and more safe gcc flags use for wireless modules (driver code in some cases ugly and mabe uncrorrect build with this options).<br>
13) kernel: ralink wifi: fix m2u filter table. Add MDNS and fix IgmpV3 filter.<br>
14) kernel: tcp: limit GSO packets to half cwnd.<br>
15) kernel: fix misuses of f_count() in ppp.<br>
16) kernel: mips: jump_label.c: Correct the span of the J instruction.<br>
17) kernel: mips: jump_label.c: Handle the microMIPS J instruction encoding.<br>
<br>
<br>
<b>1.2.x</b><br>
1) init.d/goahead: add vlan support for bridge port TV/SIP/STB modes.<br>
2) init.d/goahead: add 3WAN/2LAN modes for STB+SIP bridget ports mode.<br>
3) init.d/goahead: add get mcast from VLAN TV/SIP/STB bridges.<br>
4) init.d/goahead: move delayed backup from goahead to init.d web script.<br>
5) init.d/genkeys: remove not need sleep (move to goahead boot complite).<br>
6) init.d/dnsserv: correct steps generate hosts.<br>
6) init.d/lanconf: remove not needed swicth clear call.<br>
7) goahead: use mtd_write erase RW-FS instead of direct crash rwfs.<br>
8) goahead: add M2U conversion managment.<br>
9) kernel: mips: oprofile: Fix backtrace on 64-bit kernel.<br>
10) kernel: pptp: fix stack info leak in pptp_getname().<br>

<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>